--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,37 +7,120 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Delivery Vitória - Seu separador de pedidos inteligente"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Delivery Vitória</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- CARREGAMENTO DO TAILWIND CSS CDN (MANTENHA SEMPRE NO HEAD OU INÍCIO DO BODY) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Link para a fonte Inter do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    
+    <!-- SEUS ESTILOS CSS PERSONALIZADOS (MANTENHA AQUI PARA APLICAR GLOBALMENTE) -->
+    <style>
+      body { 
+          font-family: 'Inter', sans-serif; 
+          margin: 0; 
+          overflow-x: hidden; /* Remove barra de rolagem horizontal indesejada */
+      } 
+      .scrollable-list {
+          max-height: 400px;
+          overflow-y: auto;
+      }
+      .modal-overlay {
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: rgba(0, 0, 0, 0.7);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 1000;
+      }
+      .modal-content {
+          background-color: white;
+          padding: 2.5rem;
+          border-radius: 1.5rem;
+          box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+          max-width: 550px;
+          width: 90%;
+          position: relative;
+          transform: translateY(-20px);
+          animation: modalPopIn 0.3s ease-out forwards;
+      }
+      @keyframes modalPopIn {
+        from { opacity: 0; transform: translateY(-50px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .promotions-carousel::-webkit-scrollbar {
+        height: 8px;
+      }
+      .promotions-carousel::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        border-radius: 10px;
+      }
+      .promotions-carousel::-webkit-scrollbar-thumb {
+        background: #ef4444;
+        border-radius: 10px;
+      }
+      .promotions-carousel::-webkit-scrollbar-thumb:hover {
+        background: #dc2626;
+      }
+      .glow-button {
+        transition: all 0.3s ease;
+      }
+      .glow-button:hover {
+        box-shadow: 0 0 15px rgba(239, 68, 68, 0.6);
+      }
+      .nav-menu {
+        position: absolute;
+        top: 70px; /* Ajuste para ficar abaixo do botão de menu */
+        left: 1rem;
+        background-color: white;
+        border-radius: 0.75rem; /* rounded-xl */
+        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1); /* shadow-xl */
+        z-index: 999;
+        padding: 0.75rem; /* p-3 */
+        min-width: 180px;
+        animation: fadeIn 0.2s ease-out forwards;
+      }
+      .nav-menu button {
+        display: block;
+        width: 100%;
+        text-align: left;
+        padding: 0.75rem 1rem; /* py-3 px-4 */
+        border-radius: 0.5rem; /* rounded-lg */
+        font-weight: 500; /* font-medium */
+        color: #374151; /* gray-700 */
+        transition: background-color 0.2s, color 0.2s;
+      }
+      .nav-menu button:hover {
+        background-color: #fef2f2; /* red-50 */
+        color: #b91c1c; /* red-700 */
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(-10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para rodar este aplicativo.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      Este HTML é um template.
+      Se você abrir diretamente no navegador, verá uma página vazia.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      Você pode adicionar elementos webfonts, meta tags ou scripts a este arquivo.
+      O processo de build irá colocá-los no bundle.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      Para começar o desenvolvimento, rode `npm start` ou `yarn start`.
+      Para criar um build de produção, rode `npm run build` ou `yarn build`.
     -->
   </body>
 </html>
+
